tests/error/effects_errors/pure_calls_impure_decl.err
Error: Too many effects (at $FILE:8:10)
  | 
6 | @guppy(effects=[])
7 | def main() -> int:
8 |    return impure_func(5)
  |           ^^^^^^^^^^^ Callee of type `int -> int` has effects [ANY] not allowed
  |                       inside `main`

Note:
  | 
5 | 
6 | @guppy(effects=[])
  |  ----------------- Allowed effects declared here

Guppy compilation failed due to 1 previous error
